properties up for lenz

--- a/maalr.lenz/maalr_config/maalr.properties
+++ b/maalr.lenz/maalr_config/maalr.properties
@@ -1,10 +1,10 @@
-maalr.long.name=Lenzå
+maalr.long.name=Lenz
 maalr.short.name=Lenzå
 maalr.inet.address=localhost:8080
-maalr.context.path=/maalr
+maalr.context.path=/lenz
 
 # Lucene index directory
-maalr.lucene.dir=maalr/index
+maalr.lucene.dir=lenz/index
 
 # Lucene indexing configuration
 maalr.search.config=searchconfig_sm.xml
