--- a/maalr.lenz/maalr_config/maalr.properties
+++ b/maalr.lenz/maalr_config/maalr.properties
@@ -1,5 +1,5 @@
-maalr.long.name=Lenz
-maalr.short.name=Lenzå
+maalr.long.name=DEVOCHDELI
+maalr.short.name=DEVOCHDELIå
 maalr.inet.address=localhost:8080
 maalr.context.path=/lenz
 
