--- a/maalr.lenz/maalr_config/maalr.properties
+++ b/maalr.lenz/maalr_config/maalr.properties
@@ -10,7 +10,7 @@ maalr.lucene.dir=lenz/index
 maalr.search.config=searchconfig_sm.xml
 
 # Path to input data
-lex.file=rawEntries__2015-06-25T15:37:37Z.tab.zip
+lex.file=rawEntries__2015-06-25T15:37:37Z.tab
 
 # MongoDB settings
 mongodb.host=localhost
