htmlparser added to parent pom

--- a/maalr.parent/pom.xml
+++ b/maalr.parent/pom.xml
@@ -12,6 +12,7 @@
 		<module>../maalr.lucene</module>
 		<module>../maalr.spring.core</module>
 		<module>../maalr.gwt</module>
+		<module>../maalr.html.parser</module>
 	</modules>
 
 	<properties>
