maalr.properties now include a reference to toolbar.txt

--- a/maalr.lenz/maalr_config/maalr.properties
+++ b/maalr.lenz/maalr_config/maalr.properties
@@ -10,7 +10,9 @@ maalr.lucene.dir=lenz/index
 maalr.search.config=searchconfig_sm.xml
 
 # Path to input data
-lex.file=rawEntries__2015-08-09T23:01:32Z.tab
+lex.file=rawEntries__2015-08-10T23:44:14Z.txt
+toolbar=toolbar.txt
+
 
 # MongoDB settings
 mongodb.host=localhost
