--- a/maalr.lenz/maalr_config/maalr.properties
+++ b/maalr.lenz/maalr_config/maalr.properties
@@ -7,7 +7,7 @@ maalr.context.path=/lenz
 maalr.lucene.dir=lenz/index
 
 # Lucene indexing configuration
-maalr.search.config=searchconfig_sm.xml
+maalr.search.config=searchconfig_lenz.xml
 
 # Path to input data
 lex.file=rawEntries__2015-08-10T23:44:14Z.txt
