--- a/maalr.spring.core/pom.xml
+++ b/maalr.spring.core/pom.xml
@@ -185,14 +185,6 @@
 		</dependency>
 
 
-		<dependency>
-			<!-- jsoup HTML parser library @ http://jsoup.org/ -->
-			<groupId>org.jsoup</groupId>
-			<artifactId>jsoup</artifactId>
-			<version>1.8.2</version>
-		</dependency>
-
-
 		<!-- General web stuff -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -221,6 +213,13 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
 
 	</dependencies>
 
