--- a/maalr.common/pom.xml
+++ b/maalr.common/pom.xml
@@ -10,5 +10,13 @@
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../maalr.parent</relativePath>
 	</parent>
-	
+
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+	</dependencies>
+
 </project>
