--- a/maalr.lenz/maalr_config/maalr.properties
+++ b/maalr.lenz/maalr_config/maalr.properties
@@ -12,6 +12,7 @@ maalr.search.config=searchconfig.xml
 # Path to input data
 lex.file=rawEntries__2015-08-21T17:45:36Z.txt
 toolbar=toolbar.txt
+lessthan=lessthan.txt
 
 
 # MongoDB settings
