--- a/maalr.lenz/pom.xml
+++ b/maalr.lenz/pom.xml
@@ -1,13 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>de.uni_koeln.spinfo.maalr.lenz</groupId>
-  <artifactId>lenz</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
-  
-  <properties>
-      	<maalr.context.path>/lenz</maalr.context.path>
- 	  	<maalr.webapp.build>../maalr.lenz/target</maalr.webapp.build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>de.uni_koeln.spinfo.maalr.lenz</groupId>
+	<artifactId>lenz</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
+
+	<properties>
+		<maalr.context.path>/lenz</maalr.context.path>
+		<maalr.webapp.build>../maalr.lenz/target</maalr.webapp.build>
 		<maalr.webapp.name>lenz-${project.version}</maalr.webapp.name>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
@@ -57,13 +58,8 @@
 		</dependency>
 
 		<!-- Enable this dependency to get and display server-side statistics -->
-		<!-- 
-			<dependency>
-				<groupId>de.uni_koeln.spinfo.maalr</groupId>
-				<artifactId>sigar</artifactId> 
-				<version>0.0.1-SNAPSHOT</version>
-			</dependency> 
-		-->
+		<!-- <dependency> <groupId>de.uni_koeln.spinfo.maalr</groupId> <artifactId>sigar</artifactId> 
+			<version>0.0.1-SNAPSHOT</version> </dependency> -->
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -126,37 +122,7 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<!-- Convert the localization files from UTF-8 to ASCII and copy them to the required directory. -->
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>native2ascii-maven-plugin</artifactId>
-				<version>1.0-alpha-1</version>
-				<configuration>
-					<src>src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n</src>
-					<dest>target/classes/de/uni_koeln/spinfo/maalr/webapp/i18n</dest>
-					<encoding>UTF8</encoding>
-					<includes>**/*.properties</includes>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<id>native2ascii-utf8-resources</id>
-						<goals>
-							<goal>native2ascii</goal>
-						</goals>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<!-- Workaround to support Java 7 -->
-						<groupId>com.sun</groupId>
-						<artifactId>tools</artifactId>
-						<version>1.7.0</version>
-						<scope>system</scope>
-						<systemPath>${java.home}/../lib/tools.jar</systemPath>
-					</dependency>
-				</dependencies>
-			</plugin>
+
 
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
