--- a/maalr.lenz/maalr_config/maalr.properties
+++ b/maalr.lenz/maalr_config/maalr.properties
@@ -16,28 +16,15 @@ lex.file=rawEntries__2015-08-21T17:45:36Z.txt
 # MongoDB settings
 mongodb.host=localhost
 mongodb.port=27017
-mongodb.name=maalr-db
+mongodb.name=lenz
 
 #SCHEDULED BACKUP SETTINGS
 
 # The backup directory should be placed outside the $JETTY-HOME/webapps/
-backup.location=maalr/backup/
+backup.location=lenz/backup/
 backup.nums=3
 
 #TIME PATTERN       HH:mm:ss
 backup.trigger.time=00:00:00
 
-# Social auth credentials
-facebook.consumerKey=
-facebook.consumerSecret=
 
-twitter.consumerKey=
-twitter.consumerSecret=
-
-google.consumerKey=
-google.consumerSecret=
-
-linkedin.consumerKey=
-linkedin.consumerSecret=
-
-social.redirect.page=
