maalr.properties up

--- a/maalr.lenz/maalr_config/maalr.properties
+++ b/maalr.lenz/maalr_config/maalr.properties
@@ -1,5 +1,5 @@
-maalr.long.name=DEVOCHDELI
-maalr.short.name=DEVOCHDELIŒ
+maalr.long.name=DEVOCHDELIA
+maalr.short.name=DEVOCHDELIŒA
 maalr.inet.address=localhost:8080
 maalr.context.path=/lenz
 
