utf-8 for all jsps

--- a/maalr.gwt/src/main/webapp/WEB-INF/web.xml
+++ b/maalr.gwt/src/main/webapp/WEB-INF/web.xml
@@ -99,6 +99,11 @@
 			<url-pattern>*.jsp</url-pattern>
 			<trim-directive-whitespaces>true</trim-directive-whitespaces>
 		</jsp-property-group>
+		<jsp-property-group>
+			<url-pattern>*.jsp</url-pattern>
+			<page-encoding>UTF-8</page-encoding>
+		</jsp-property-group>
+
 	</jsp-config>
 
 </web-app>
