--- a/maalr.lenz/maalr_config/maalr.properties
+++ b/maalr.lenz/maalr_config/maalr.properties
@@ -1,27 +1,26 @@
-maalr.long.name=DEVOCHDELIA
-maalr.short.name=DEVOCHDELIŒA
+maalr.long.name=devochdelia
+maalr.short.name=devochdelia
 maalr.inet.address=localhost:8080
-maalr.context.path=/lenz
+maalr.context.path=/devochdelia
 
 # Lucene index directory
-maalr.lucene.dir=lenz/index
+maalr.lucene.dir=devochdelia/index
 
 # Lucene indexing configuration
 maalr.search.config=searchconfig.xml
 
 # Path to input data
-lex.file=rawEntries__2015-08-21T17:45:36Z.txt
-
+lex.file=rawEntries_20170303.txt
 
 # MongoDB settings
 mongodb.host=localhost
 mongodb.port=27017
-mongodb.name=lenz
+mongodb.name=devochdelia
 
 #SCHEDULED BACKUP SETTINGS
 
 # The backup directory should be placed outside the $JETTY-HOME/webapps/
-backup.location=lenz/backup/
+backup.location=devochdelia/backup/
 backup.nums=3
 
 #TIME PATTERN       HH:mm:ss
