string values for font sizes up

--- a/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/common/client/toolbar/RichTextToolbar_Strings.properties
+++ b/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/common/client/toolbar/RichTextToolbar_Strings.properties
@@ -27,9 +27,10 @@ font = Font
 normal = Normal
 size = Size
 xxsmall = XX-Small
-xsmall = X-Small
-small = Small
+xsmall = Comment
+small = Standard
 medium = Medium
 large = Large
 xlarge = X-Large
 xxlarge = XX-Large
+smallCaps =  Toggle Small Caps
