--- a/maalr.mackenzie/.project
+++ b/maalr.mackenzie/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>maalr.russian.demo</name>
+	<name>maalr.mackenzie</name>
 	<comment></comment>
 	<projects>
 	</projects>
