--- a/maalr.mackenzie/maalr_config/maalr.properties
+++ b/maalr.mackenzie/maalr_config/maalr.properties
@@ -1,26 +1,26 @@
-maalr.long.name=Maalr - Modern Approach to Aggregate Lexical Resources
-maalr.short.name=Maalrå
+maalr.long.name=MacKenzie - Middle Persian Dictionary
+maalr.short.name=mackzenzie
 maalr.inet.address=localhost:8080
-maalr.context.path=/maalr
+maalr.context.path=/mackenzie
 
 # Lucene index directory
-maalr.lucene.dir=maalr/index
+maalr.lucene.dir=mackenzie/index
 
 # Lucene indexing configuration
 maalr.search.config=searchconfig.xml
 
 # Path to input data
-lex.file=src/test/resources/dictionary.tsv
+lex.file=mackenzie.tsv
 
 # MongoDB settings
 mongodb.host=localhost
 mongodb.port=27017
-mongodb.name=maalr-db
+mongodb.name=mackenzie
 
 #SCHEDULED BACKUP SETTINGS
 
 # The backup directory should be placed outside the $JETTY-HOME/webapps/
-backup.location=maalr/backup/
+backup.location=mackenzie/backup/
 backup.nums=3
 
 #TIME PATTERN       HH:mm:ss
