--- a/maalr.gwt/pom.xml
+++ b/maalr.gwt/pom.xml
@@ -15,31 +15,31 @@
 		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 		<maalr.import>false</maalr.import>
 	</properties>
-	
-	
+
+
 	<profiles>
-	
+
 		<profile>
 			<id>import</id>
 			<properties>
-				<maalr.import>true</maalr.import>		
+				<maalr.import>true</maalr.import>
 			</properties>
 		</profile>
-	
+
 		<profile>
 			<id>dict-ru</id>
 			<properties>
-				<maalr.config.dir>src/test/resources/maalr_russian</maalr.config.dir>		
+				<maalr.config.dir>src/test/resources/maalr_russian</maalr.config.dir>
 			</properties>
 		</profile>
-		
+
 		<profile>
 			<id>dict-en-min</id>
 			<properties>
-				<maalr.config.dir>src/test/resources/maalr_minimal</maalr.config.dir>		
+				<maalr.config.dir>src/test/resources/maalr_minimal</maalr.config.dir>
 			</properties>
 		</profile>
-	
+
 		<profile>
 			<!-- Improve GWT compile time -->
 			<id>gwt-dev</id>
@@ -81,7 +81,7 @@
 			<artifactId>gwt-bootstrap</artifactId>
 			<version>2.3.2.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>de.uni_koeln.spinfo.maalr</groupId>
 			<artifactId>mongo</artifactId>
@@ -104,14 +104,14 @@
 			<version>${gwt.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-user</artifactId>
 			<version>${gwt.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.google.gwt.google-apis</groupId>
 			<artifactId>gwt-visualization</artifactId>
@@ -125,13 +125,13 @@
 			<version>${spring.version}</version>
 			<optional>false</optional>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator-annotation-processor</artifactId>
 			<version>4.1.0.Final</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
@@ -145,19 +145,19 @@
 			<artifactId>gwt-sl</artifactId>
 			<version>1.3-RC1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>net.sourceforge.nekohtml</groupId>
 			<artifactId>nekohtml</artifactId>
 			<version>1.9.16</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.4.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -213,7 +213,8 @@
 					<!-- Use custom jetty context (improved startup time) -->
 					<contextXml>src/test/resources/jetty-context.xml</contextXml>
 					<webAppConfig>
-						<!-- Also use src/main/webapp as resource directory (allows modifying JSP's without server restart) -->
+						<!-- Also use src/main/webapp as resource directory (allows modifying 
+							JSP's without server restart) -->
 						<baseResource implementation="org.eclipse.jetty.util.resource.ResourceCollection">
 							<resourcesAsCSV>src/main/webapp,${webappDirectory}</resourcesAsCSV>
 						</baseResource>
@@ -288,38 +289,16 @@
 				<version>2.12.2</version>
 			</plugin>
 
-			<plugin>
-				<!-- Convert the localization files from UTF-8 to ASCII and copy them 
-					to the required directory. -->
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>native2ascii-maven-plugin</artifactId>
-				<version>1.0-alpha-1</version>
-				<configuration>
-					<dest>target/classes/de/uni_koeln/spinfo/maalr/webapp/i18n</dest>
-					<src>src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n</src>
-					<encoding>UTF8</encoding>
-					<includes>**/*.properties</includes>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<id>native2ascii-utf8-resources</id>
-						<goals>
-							<goal>native2ascii</goal>
-						</goals>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<!-- Workaround to support Java 7 -->
-						<groupId>com.sun</groupId>
-						<artifactId>tools</artifactId>
-						<version>1.7.0</version>
-						<scope>system</scope>
-						<systemPath>${java.home}/../lib/tools.jar</systemPath>
-					</dependency>
-				</dependencies>
-			</plugin>
+			<!--<plugin> Convert the localization files from UTF-8 to ASCII and copy 
+				them to the required directory. <groupId>org.codehaus.mojo</groupId> <artifactId>native2ascii-maven-plugin</artifactId> 
+				<version>1.0-alpha-1</version> <configuration> <dest>target/classes/de/uni_koeln/spinfo/maalr/webapp/i18n</dest> 
+				<src>src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n</src> <encoding>UTF8</encoding> 
+				<includes>**/*.properties</includes> </configuration> <executions> <execution> 
+				<phase>compile</phase> <id>native2ascii-utf8-resources</id> <goals> <goal>native2ascii</goal> 
+				</goals> </execution> </executions> <dependencies> <dependency> <groupId>com.sun</groupId> 
+				<artifactId>tools</artifactId> <version>1.7.0</version> <scope>system</scope> 
+				<systemPath>${java.home}/../lib/tools.jar</systemPath> </dependency> </dependencies> 
+				</plugin> -->
 		</plugins>
 
 		<resources>
